<resources>
    <string name="app_name">Registration</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_question">Sign in to your account</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_up">Sign up</string>
    <string name="password">Password</string>
    <string name="username">Username</string>

    <string name="sign_up_message">You signed up</string>
    <string name="sign_up_message_fail">Can not sign up</string>
    <string name="sign_in_message">You signed in</string>
    <string name="sign_in_message_fail">Username or password is wrong</string>

    <string name="title_activity_show_name">showNameActivity</string>

    <string name="pref_name">com.Android_Fegisteration_Form.preference_file_key</string>
    <string name="pref_profile">com.Android_Fegisteration_Form.pref_profile</string>

    <string name="invalid_pass">InvalidPassword</string>

    <string name="logedInUsername">com.Android_Fegisteration_Form.MESSAGE</string>

    <string name="dialog_message">If you want to sign in click sign in, else click cancel</string>
    <string name="posetive_dialog_button">Sign-in</string>
    <string name="negative_dialog_button">Cancel</string>

    <string name="passwordHint">Type password here</string>
    <string name="title_activity_splash_screen">Registration Form</string>

    <string name="login_time">Login_time</string>
    <string name="title_activity_show_profile">ShowProfileActivity</string>
    <string name="title_activity_edit_profile">EditProfileActivity</string>

    <string name="noProfileToShow">your profile is empty</string>
    <string name="title_activity_sign_up">SignUpActivity</string>
    <string name="edit_profile">save changes</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_show_barcode_content_fragment">ShowBarcodeContentFragment</string>

    <string name="format_barcode">FORMAT</string>
    <string name="contents_barcode">CONTENTS</string>

    <string name="email_contact_us">alim.faraji@gmail.com</string>
    <string name="phone_number_contact_us">09356385642</string>
    <string name="subject_contact_us">Contact us</string>
    <string name="title_bar_chooser_contact_us">Send Email</string>

    <string name="saved_button_edit_profile">Saved</string>
    <string name="first_name_invalid_exception">You Should enter first name</string>
    <string name="last_name_invalid_exception">You should enter last name</string>
    <string name="birthday_invalid_exception">Birthday is invalid</string>
    <string name="email_address_invalid_exception">Email is invalid</string>
    <string name="username_exists_exception">Username exists, try another one</string>
    <string name="username_invalid_exception">Invalid username</string>
    <string name="password_invalid_exception">Password is invalid</string>
    <string name="username_not_found_exception">You have not sign up yet, click sign up</string>
    <string name="username_or_password_wrong_exception">Password is wrong</string>
</resources>