<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:background="#ffffff"
    android:orientation="vertical"
    android:weightSum="1">

    <include
        android:id="@+id/tool_bar"
        layout="@layout/tool_bar"></include>


    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="90dp"
        android:layout_height="5dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="40dp"
        android:layout_weight="0.41"
        android:background="@drawable/logo3" />

    <TextView
        android:id="@+id/question_signIn_or_singUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left|center_horizontal"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="10dp"
        android:text="@string/title_question"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#ff737373" />

    <EditText
        android:id="@+id/username_field"
        android:layout_width="337dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:hint="@string/username"
        android:inputType="textPersonName" />


    <EditText
        android:id="@+id/password_field"
        android:layout_width="337dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/sign_in"
        android:layout_width="337dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="20dp"
        android:text="@string/sign_in" />

    <TextView
        android:id="@+id/sign_up_main_activity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="10dp"
        android:text="or signUp" />

    <TextView
        android:id="@+id/username_or_password_wrong_error"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="50px" />


</LinearLayout>